# Natt-Os_SignSira

./: .dockerignore  .gitignore  01_DIEN_VAN_HOI_TRUONG_AGI_ss20260429.md  02_BAI_GUI_DOC_GIA_ss20260429.md  03_DE_AN_HOI_DONG_HAN_LAM_v2_0_ss20260429.md  05-phase3-finalize.sh  06-move-deprecated.sh  CONSTITUTION_v4.md  CUTOVER_RISK_MAP_20260423.phieu  Dockerfile  Hiến Pháp Sinh Thể Số.anc  MIGRATION_REPORT_ss20260430.md  NATT-OS-PLATFORM-SPEC.md  PILOT_CLUSTER_GROUND_TRUTH_20260423.na  README.md  RECOVERY_REPORT.md  apply-section-40.sh  audit_goldmaster_20260224.txt  audit_mac_local.txt  bang_fix.py  bangmf_v5.9.7_full.json  batch_b_merge.py  batch_c_merge.py  boi_scan_truth.txt  bypass-report-v2.txt  bypass-report.txt  bảng tv.xlsx  cayhethong.md  chromatic-state.engine.ts  chuyenngu.py  chuyển Ngữ.xlsx  chuyễnngữ.csv  commit_bang_batch_20260423.sh  docs-living-map-ss20260428.skill  dryrun-report.txt  emergent-behavior-report.json  error-log.txt  fix-tsc-cleanup.sh  fix_all_13.py  fix_c1_controls.py  (+52 more)
.gcloud/: .last_survey_prompt.yaml  .last_update_check.json  access_tokens.db  credentials.db  default_configs.db
.githooks/: commit-msg
.nattos-twin/: api-violations.json  arch-map.json  cell-dna.json  engine-map.json  event-graph.json  hien-phap-scan.json  history.json  inference.json  signal-map.json  snapshot.json
BCTC_FORMS_PATCH_2026-03-13/: INSTALL.sh
NaUion-Server/: ANC_GENERATION_DEFINITION_v1.si  BAO_CAO_KHOA_HOC_NAUION_KERNEL_RUNTIME_PROOF_ss20260430.md  BAO_CAO_NGHIEM_THU_NATT_NELL_NATTCELL_NAUION_KERNEL_v1.na  BAO_CAO_NGHIEM_THU_NATT_NELL_NATTCELL_NAUION_KERNEL_v1_1.na  BAO_CAO_NGHIEM_THU_NATT_NELL_NATTCELL_NAUION_KERNEL_v1_2.na  BOOT_DOVAN.anc  BOOT_DOVAN.boot.si  BOOT_DOVAN_ANC_PRESENCE_RULE_v1.si  BOOT_DOVAN_BANG.boot.si  BOOT_DOVAN_BOOT_AUDIT_EVENT_v0.1.na  BOOT_DOVAN_BOOT_RULE.si  BOOT_DOVAN_CONSOLE.kkbt  (+43 more)
docs/runtime/nauion-host/: Cargo.toml  README.md
docs/runtime/nauion-host/src/: banner.rs  heyna_receiver.rs  main.rs  phase1.rs  phase3.rs  phase4.rs  phase4.rs.bak.v0.1  result_writer.rs  run_cell.rs  sirasign.rs
runtime/nauion-host/: Cargo.toml
runtime/nauion-host/src/: banner.rs  legacy_json.rs  main.rs  phase1.rs  phase2.rs  phase3.rs  repo_root.rs  result_writer.rs  run_cell.rs
(+6060 files in other folders)
